[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-guardian"
version = "0.1.0"
description = "Automated model quality gates for MLflow — compare, evaluate, and auto-promote ML models in CI/CD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.11.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "diagnost>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]